--- a/apps/nextjs/package.json
+++ b/apps/nextjs/package.json
@@ -13,13 +13,14 @@
     "typecheck": "tsc --noEmit",
     "with-env": "dotenv -e ../../.env --"
   },
+  "prettier": "@acme/prettier-config",
   "dependencies": {
     "@acme/api": "workspace:*",
-    "@supabase/ssr": "^0.3.0",
-    "@supabase/supabase-js": "^2.43.1",
     "@acme/db": "workspace:*",
     "@acme/ui": "workspace:*",
     "@acme/validators": "workspace:*",
+    "@supabase/ssr": "^0.3.0",
+    "@supabase/supabase-js": "^2.43.1",
     "@t3-oss/env-nextjs": "^0.10.1",
     "@tanstack/react-query": "^5.49.2",
     "@trpc/client": "11.0.0-rc.441",
@@ -53,6 +54,5 @@
     "prettier": "^3.3.2",
     "tailwindcss": "^3.4.4",
     "typescript": "^5.5.3"
-  },
-  "prettier": "@acme/prettier-config"
+  }
 }
